src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_src_tools_miri.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test src/tools/miri
---
[Test] test::Miri
    targets: [aarch64-unknown-linux-gnu]
    - Set({src/tools/miri})
[Test] test::CargoMiri
    targets: [aarch64-unknown-linux-gnu]
    - Set({src/tools/miri/cargo-miri})
