src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_tests_coverage_trivial_rs_and_attr_impl_rs.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test tests/coverage/trivial.rs tests/coverage/attr/impl.rs
---
[Test] test::Coverage
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/coverage)
[Test] test::Coverage
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/coverage)
