src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_tests_skip_coverage.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test tests --skip=coverage
---
[Test] test::Ui
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/ui)
[Test] test::Crashes
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/crashes)
[Test] test::MirOpt
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/mir-opt)
[Test] test::CodegenLlvm
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/codegen-llvm)
[Test] test::CodegenUnits
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/codegen-units)
[Test] test::AssemblyGcc
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/assembly-gcc)
[Test] test::AssemblyLlvm
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/assembly-llvm)
[Test] test::Incremental
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/incremental)
[Test] test::Debuginfo
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/debuginfo)
[Test] test::UiFullDeps
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/ui-fulldeps)
[Test] test::RustdocHtml
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/rustdoc-html)
[Test] test::CoverageRunRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/coverage-run-rustdoc)
[Test] test::Pretty
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/pretty)
[Test] test::Clippy
    targets: [x86_64-unknown-linux-gnu]
    - Suite(src/tools/clippy/tests)
[Test] test::RustdocJSStd
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/rustdoc-js-std)
[Test] test::RustdocJSNotStd
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/rustdoc-js)
[Test] test::RustdocGUI
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/rustdoc-gui)
[Test] test::RustdocUi
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/rustdoc-ui)
[Test] test::RustdocJson
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/rustdoc-json)
[Test] test::RunMake
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/run-make)
[Test] test::RunMakeCargo
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/run-make-cargo)
[Test] test::BuildStd
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/build-std)
