src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_tests_ui.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test tests/ui
---
[Test] test::Ui
    targets: [aarch64-unknown-linux-gnu]
    - Suite("tests/ui")
