src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_tidyselftest.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test tidyselftest
---
[Test] test::CrateBootstrap
    targets: [x86_64-unknown-linux-gnu]
    - Set({"tidyselftest"})
